# lga-server

./: .dockerignore  .envtemp  .gitignore  Dockerfile  Dockerfile2-1  Dockerfile2-2  README.md  build.py  db.py  docker-compose.yml  docker-compose2.yml  init.sql  main.py  pyproject.toml  requirements.txt
config/: .envtemp
lga-api/: main.py
lga-web/: .eslintrc-auto-import.json  .eslintrc.js  .prettierrc.js  dockerfile  index.html  vite.config.js
lga-web/src/: App.vue  main.js
lga-web/src/base/: http.js
lga-web/src/components/: container.vue
lga-web/src/store/: index.js  system.js
model/: task.py
resources/template/: 1.html
router/: index.py
router/auth/: AuthController.py
router/example/: ExampleController.py
router/task/: TaskController.py
router/task/model/: info.py  page.py
router/user/: UserController.py
server/example/: ExampleController.py
server/task/: TaskController.py
server/task/model/: info.py  page.py
server/user/: UserController.py
tasks/: hello.py  hello2.py
util/: PPAFastAPI.py  base.py  exception.py  redis.py  response.py  scheduler.py  system.py  task.py
web/: .eslintrc.js  .prettierrc.js  index.html  package.json  readme.md  vite.config.js
web/src/: App.vue  main.js
web/src/assets/: index.scss
web/src/base/: http.js
web/src/components/: codePanel.vue  container.vue
web/src/http/: index.js  request.js
web/src/store/: index.js  system.js
