[tool.poetry]
name = "lga"
version = "1.0.0"
description = "代码生成服务"
authors = ["larry"]
homepage = "https://github.com/MrYZhou/lga"
repository = "https://github.com/MrYZhou/lga.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"  # 服务框架
uvicorn = {extras = ["standard"], version = "^0.27.1"}  # 应用服务器
aiomysql = "^0.2.0"  # MySQL异步驱动
aiofiles = "^23.2.1"  # 异步文件操作库
nanoid = "^2.0.0"  # 非常小且安全的ID生成器
cryptography = "^42.0.5" # aiomysql 密码认证依赖
laorm = "^2.0.0" # orm库
python-dotenv = "^1.0.1" #加载env配置文件
apscheduler = "^3.10.4" # 任务调度

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"


