[tool.poetry]
name = "lga"
version = "1.1.0"
description = "调度服务"
authors = ["larry"]
homepage = "https://github.com/MrYZhou/lga"
repository = "https://github.com/MrYZhou/lga.git"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = { extras = ["standard"], version = "^0.115.5" } # 更改为最新稳定版的FastAPI
uvicorn = { extras = ["standard"], version = "^0.34.0" }  # 或者使用最新稳定版Uvicorn
aiomysql = "^0.2.0"  # MySQL异步驱动
aiofiles = "^23.2.1"  # 异步文件操作库
walrus = "^0.9.3"                                         # api请求限速
nanoid = "^2.0.0"  # 非常小且安全的ID生成器
cryptography = "^42.0.5" # aiomysql 密码认证依赖
laorm = "^3.0.0" # orm库
python-dotenv = "^1.0.1" #加载.env配置文件
apscheduler = "^3.10.4" # 任务调度
pyjwt = "^2.10.0"                                         # JWT认证依赖
redis = "^5.2.0"
[tool.poetry.dev-dependencies]
pyinstaller = { version = "^6.4.0", python = ">=3.10,<3.13" } # 打包exe
[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
